--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             >
           </div>
           <ul class="bookmarks">
-            <li><a href="/agency">Agencja</a></li>
+            <li><a href="index.html" class="active">Agencja</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="/contact">Kontakt</a></li>
           </ul>
