--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
         </div>
         <ul class="bookmarks">
           <li><a href="/agency">Agencja</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="portfolio.html" class="active">Portfolio</a></li>
           <li><a href="/contact">Kontakt</a></li>
         </ul>
         <ul class="contact">
