--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                 <ul class="work-img">
                   <div class="what-we-do-img">
                   <li>
+                    <div class="overlay">
+                      APLIKACJE KOMPUTEROWE
+                    </div>
                     <img
                       src="images/box1.jpg"
                       alt="write code"
@@ -128,6 +131,9 @@
                   </div>
                   <div class="what-we-do-img">
                   <li>
+                    <div class="overlay">
+                      APLIKACJE MOBILNE
+                    </div>
                     <img
                       src="images/box2.jpg"
                       alt="mobile aplication"
@@ -138,6 +144,9 @@
                   </div>
                   <div class="what-we-do-img">
                   <li>
+                    <div class="overlay">
+                        ROZWIĄZANIA GRAFICZNE
+                    </div>
                     <img
                       src="images/box3.jpg"
                       alt="color design"
