--- a/portfolio.html
+++ b/portfolio.html
@@ -78,6 +78,14 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-portfolio">
+                <span
+                  >Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowcheniania koronawirusa. Firmy wykorzystują tę platformę
+                  do celów szpiegowskich i ataków na niezabezpieczone serwery
+                  konkurencji
+                </span>
+              </div>
               <div class="design-img-border">
                 <p class="design-name">Technocrack</p>
                 <p class="design-version">Strona internetowa</p>
@@ -92,6 +100,14 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-portfolio">
+                <span
+                  >Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowcheniania koronawirusa. Firmy wykorzystują tę platformę
+                  do celów szpiegowskich i ataków na niezabezpieczone serwery
+                  konkurencji
+                </span>
+              </div>
               <p class="design-name">Grafika New Orlean vs Golden Star</p>
               <p class="design-version">Dizajn</p>
             </li>
@@ -104,6 +120,14 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-portfolio">
+                <span
+                  >Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowcheniania koronawirusa. Firmy wykorzystują tę platformę
+                  do celów szpiegowskich i ataków na niezabezpieczone serwery
+                  konkurencji
+                </span>
+              </div>
               <p class="design-name">Restauracja Seafood</p>
               <p class="design-version">Aplikacja</p>
             </li>
@@ -116,6 +140,14 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-portfolio">
+                <span
+                  >Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowcheniania koronawirusa. Firmy wykorzystują tę platformę
+                  do celów szpiegowskich i ataków na niezabezpieczone serwery
+                  konkurencji
+                </span>
+              </div>
               <p class="design-name">Projekt Prime</p>
               <p class="design-version">Marketing</p>
             </li>
@@ -128,6 +160,14 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-portfolio">
+                <span
+                  >Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowcheniania koronawirusa. Firmy wykorzystują tę platformę
+                  do celów szpiegowskich i ataków na niezabezpieczone serwery
+                  konkurencji
+                </span>
+              </div>
               <p class="design-name">Projekt Boxes</p>
               <p class="design-version">Aplikacja</p>
             </li>
@@ -140,6 +180,14 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-portfolio">
+                <span
+                  >Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowcheniania koronawirusa. Firmy wykorzystują tę platformę
+                  do celów szpiegowskich i ataków na niezabezpieczone serwery
+                  konkurencji
+                </span>
+              </div>
               <p class="design-name">Inspiration has no Borders</p>
               <p class="design-version">Strona internetowa</p>
             </li>
@@ -152,6 +200,14 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-portfolio">
+                <span
+                  >Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowcheniania koronawirusa. Firmy wykorzystują tę platformę
+                  do celów szpiegowskich i ataków na niezabezpieczone serwery
+                  konkurencji
+                </span>
+              </div>
               <p class="design-name">Magazyn Limited Edition</p>
               <p class="design-version">Dizajn</p>
             </li>
@@ -164,6 +220,14 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-portfolio">
+                <span
+                  >Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowcheniania koronawirusa. Firmy wykorzystują tę platformę
+                  do celów szpiegowskich i ataków na niezabezpieczone serwery
+                  konkurencji
+                </span>
+              </div>
               <p class="design-name">Projekt LAB</p>
               <p class="design-version">Marketing</p>
             </li>
@@ -176,6 +240,14 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-portfolio">
+                <span
+                  >Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowcheniania koronawirusa. Firmy wykorzystują tę platformę
+                  do celów szpiegowskich i ataków na niezabezpieczone serwery
+                  konkurencji
+                </span>
+              </div>
               <p class="design-name">Growing Business</p>
               <p class="design-version">Aplikacja</p>
             </li>
