--- a/index.html
+++ b/index.html
@@ -56,8 +56,15 @@
         <div class="container">
           <div class="main-box">
             <h1 class="main-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-            <button class="btn-order" type="button">Zamów usługe</button>
+            <button class="btn-order" type="button" data-modal-open>Zamów usługe</button>
           </div> 
+
+          <div class="modal" data-modal>
+            <div class="modal-content">
+              <button class="modal-close" type="button" data-modal-close>x</button>
+            </div>
+          </div>
+
         </div> 
         <ul class="lorem-main-box">
           <li class="lorem-box">
